# promkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Concept.md  LICENSE  README.md
.github/workflows/: ci.yml  promkit.yml  prompt.yml
debugs/: cursor.rs
event-dbg/: Cargo.toml  README.md
event-dbg/src/: main.rs
examples/: README.md  checkbox.rs  confirm.rs  e2e.rs  interact.rs  json.rs  listbox.rs  listbox_keymap.rs  password.rs  query_selector.rs  queryselect.rs  readline.rs  readline2.rs  readline_keymap.rs  readline_loop.rs  readline_suggest.rs  readline_validator.rs  select.rs  tree.rs
examples/advanced/: custom_event_handler.rs  custom_input_handler.rs  custom_keybind.rs
examples/bk/: password.rs  (+1 more)
examples/readline/: Cargo.toml  label.rs  limit_history_size.rs  masking.rs  num_lines.rs  overwrite.rs  readline.rs  suggest.rs  title.rs
examples/readline/src/: readline.rs  readline_loop.rs
examples/readline/tests/: middle_insert_wrap.rs  pty_linewrap.rs  resize_wrap.rs
examples/readline/tests/cases/: middle_insert_wrap.after.txt  resize_wrap.before.txt  resize_wrap.expected.txt
examples/readline/tests/support/: mod.rs
jless/: CHANGELOG.md  Cargo.toml
promkit/: Cargo.toml
promkit-async/: Cargo.toml  README.md
promkit-async/examples/: lazy.rs
promkit-async/examples/lazyutil/: keymap.rs  mod.rs  render.rs
promkit-async/src/: char_buffer.rs  display_coordinator.rs  event_buffer.rs  lib.rs  merge.rs  resize_debounce.rs  spinner.rs
promkit-core/: Cargo.toml  README.md
promkit-core/src/: grapheme.rs  lib.rs  pane.rs  render.rs  terminal.rs
promkit-derive/: Cargo.toml  README.md
promkit-derive/examples/: derive.rs  example.rs
promkit-derive/src/: lib.rs  readline.rs  text_editor.rs
promkit-widgets/: Cargo.toml  README.md
promkit-widgets/src/: checkbox.rs  cursor.rs  jsonstream.rs  lib.rs  listbox.rs  spinner.rs  status.rs  text.rs  text_editor.rs  tree.rs
promkit-widgets/src/checkbox/: checkbox.rs  config.rs  format.rs  state.rs
promkit-widgets/src/cursor/: len.rs
promkit-widgets/src/jsonstream/: config.rs  format.rs  jsonstream.rs  jsonz.rs  state.rs
promkit-widgets/src/jsonstream/jsonz/: format.rs
promkit-widgets/src/listbox/: config.rs  format.rs  listbox.rs  state.rs
promkit-widgets/src/spinner/: frame.rs
promkit-widgets/src/text/: config.rs  format.rs  state.rs  text.rs
promkit-widgets/src/text_editor/: config.rs  format.rs  history.rs  state.rs  text_editor.rs
promkit-widgets/src/tree/: config.rs  format.rs  node.rs  state.rs  tree.rs
promkit-widgets/tests/: tests.rs
promkit-widgets/tests/jsonz/: create_rows.rs  down.rs  extract.rs  get_all_paths.rs  head.rs  jsonl.rs  set_rows_visibility.rs  tail.rs  toggle.rs  up.rs
promkit/examples/: checkbox.rs  confirm.rs  form.rs  json.rs  largejson.rs  listbox.rs  password.rs  query_selector.rs  readline.rs  readline_loop.rs  text.rs  tree.rs
promkit/src/: core.rs  engine.rs  error.rs  grapheme.rs  jsonz.rs  lib.rs  macros.rs  pane.rs  preset.rs  snapshot.rs  style.rs  suggest.rs  switch.rs  terminal.rs  validate.rs
promkit/src/core/: checkbox.rs  cursor.rs  json.rs  jsonstream.rs  listbox.rs  snapshot.rs  text.rs  text_editor.rs  tree.rs
promkit/src/core/checkbox/: render.rs  state.rs
promkit/src/core/cursor/: composite.rs  len.rs
promkit/src/core/json/: node.rs  render.rs  state.rs
promkit/src/core/jsonstream/: state.rs
promkit/src/core/listbox/: state.rs
promkit/src/core/text/: state.rs
promkit/src/core/text_editor/: history.rs  state.rs
promkit/src/core/tree/: node.rs  state.rs
promkit/src/grapheme/: styled.rs
promkit/src/jsonz/: format.rs
promkit/src/preset/: checkbox.rs  confirm.rs  form.rs  json.rs  listbox.rs  password.rs  query_selector.rs  readline.rs  text.rs  tree.rs
promkit/src/preset/checkbox/: evaluate.rs  keymap.rs  render.rs
promkit/src/preset/form/: evaluate.rs  keymap.rs  render.rs
promkit/src/preset/json/: evaluate.rs  keymap.rs  render.rs
promkit/src/preset/listbox/: evaluate.rs  keymap.rs  render.rs
promkit/src/preset/query_selector/: evaluate.rs  keymap.rs  render.rs
promkit/src/preset/readline/: confirm.rs  evaluate.rs  keymap.rs  password.rs  render.rs
promkit/src/preset/text/: evaluate.rs  keymap.rs  render.rs
promkit/src/preset/tree/: evaluate.rs  keymap.rs  render.rs
promkit/tests/: jsonz_create_rows_test.rs  jsonz_down_test.rs  jsonz_extract_test.rs  jsonz_get_all_paths_test.rs  jsonz_head_test.rs  jsonz_jsonl_test.rs  jsonz_set_nodes_visibility_test.rs  jsonz_set_rows_visibility_test.rs  jsonz_tail_test.rs  jsonz_test.rs  jsonz_toggle_test.rs  jsonz_up_test.rs
scripts/: render_tapes_gif.sh
src/: buffer.rs  build.rs  cmd.rs  components.rs  core.rs  cursor.rs  edit.rs  editor.rs  engine.rs  error.rs  event_handler.rs  fake_input.rs  grapheme.rs  grid.rs  handler.rs  history.rs  item_box.rs  keybind.rs  keymap.rs  lib.rs  macros.rs  pane.rs  preset.rs  readline.rs  render.rs  select.rs  select_box.rs  selectbox.rs  snapshot.rs  state.rs  style.rs  suggest.rs  terminal.rs  termutil.rs  text.rs  text_buffer.rs  theme.rs  tree.rs  treeview.rs  validate.rs  (+3 more)
tapes/: checkbox.tape  confirm.tape  form.tape  json.tape  listbox.tape  password.tape  query_selector.tape  readline.tape  text.tape  tree.tape
termharness/: Cargo.toml
termharness/src/: error.rs  formatting.rs  lib.rs  screen.rs  screen_assert.rs  session.rs  terminal.rs
zsh-render-parity/: Cargo.toml
zsh-render-parity/src/: main.rs
zsh-render-parity/tests/: mid_buffer_insert_wrap.rs  middle_insert_wrap.rs  middle_prompt_start.rs  prompt_initial_render_at_mid_screen.rs  resize_roundtrip_wrap_reflow.rs  resize_wrap.rs  small_terminal_overflow.rs  tiny_viewport_overflow_wrap_scroll.rs
zsh-render-parity/tests/common/: mod.rs
zsh_pretend/: Cargo.toml
zsh_reference_capture/: Cargo.toml
zsh_reference_capture/src/: capture.rs  lib.rs  zsh_middle_insert_wrap.rs  zsh_resize_wrap.rs
zsh_reference_capture/zsh_pretend/: Cargo.toml
zsh_reference_capture/zsh_pretend/src/: lib.rs  main.rs  middle_insert_wrap.rs
zsherio/: Cargo.toml
(+207 files in other folders)
