[workspace]
resolver = "2"
members = [
  "event-dbg",
  "examples/*",
  "promkit",
  "promkit-core",
  "promkit-derive",
  "promkit-widgets",
]

[workspace.dependencies]
anyhow = "1.0.98"
crossbeam-skiplist = "0.1.3"
crossterm = { version = "0.29.0", features = ["use-dev-tty", "event-stream", "serde"] }
futures = "0.3.31"
radix_trie = "0.2.1"
rayon = "1.10.0"
scopeguard = "1.2.0"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.46.1", features = ["full"] }
unicode-width = "0.2.1"
