[workspace]
resolver = "2"
members = [
  "event-dbg",
  "examples/*",
  "promkit",
  "promkit-core",
  "promkit-derive",
  "promkit-widgets",
  "termharness",
  "zsh-render-parity",
  "zsherio",
]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
crossbeam-skiplist = "0.1.3"
crossterm = { version = "0.29.0", features = ["use-dev-tty", "event-stream", "serde"] }
futures = "0.3.32"
portable-pty = "0.9.0"
radix_trie = "0.3.0"
rayon = "1.11.0"
scopeguard = "1.2.0"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
termcfg = { version = "0.2.0", features = ["crossterm_0_29_0"] }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
unicode-width = "0.2.2"
