[package]
name = "promkit-derive"
version = "0.2.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "A derive macro for promkit"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.52", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# NOTE: The derive crate is incubating and not well maintained,
# so we leave the path specification off for now.
# However, ideally it should notice the latest version of promkit by specifying the path.
promkit = { version = "=0.10.0", features = ["form"] }

[dev-dependencies]
tokio = { workspace = true }
