[package]
name = "promkit-widgets"
version = "0.1.0"
edition = "2024"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
description = "Widgets for promkit"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[features]
default = []
all = ["checkbox", "jsonstream", "listbox", "text", "texteditor", "tree"]
checkbox = ["listbox"]
jsonstream = ["dep:serde", "dep:serde_json", "dep:rayon"]
listbox = []
text = []
texteditor = []
tree = []

[dependencies]
anyhow = { workspace = true }
promkit-core = { path = "../promkit-core", version = "=0.1.0" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
# Enable `jsonstream` feature when `jsonz` testing
promkit-widgets = { path = ".", features = ["jsonstream"] }
