[package]
name = "promkit-widgets"
version = "0.2.0"
edition = "2024"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
description = "Widgets for promkit"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[features]
default = ["all"]
all = ["checkbox", "jsonstream", "listbox", "spinner", "text", "texteditor", "tree"]
checkbox = ["listbox"]
jsonstream = ["dep:serde", "dep:serde_json", "dep:rayon"]
listbox = []
spinner = ["dep:tokio", "dep:async-trait"]
text = []
texteditor = []
tree = []

[dependencies]
anyhow = { workspace = true }
promkit-core = { path = "../promkit-core", version = "=0.2.0" }

# Optional dependencies
async-trait = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
# Enable `jsonstream` feature when `jsonz` testing
promkit-widgets = { path = ".", features = ["jsonstream"] }
