[package]
name = "promkit"
version = "0.9.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "A toolkit for building your own interactive command-line tools"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[lib]
name = "promkit"
path = "src/lib.rs"

[features]
default = [
    "checkbox",
    "form",
    "json",
    "listbox",
    "query_selector",
    "readline",
    "password",
    "confirm",
    "text",
    "tree",
]

checkbox = ["promkit-widgets/checkbox"]
form = []
json = ["promkit-widgets/jsonstream"]
listbox = ["promkit-widgets/listbox"]
query_selector = []
readline = ["promkit-widgets/texteditor"]
password = ["readline"]
confirm = ["readline"]
text = ["promkit-widgets/text"]
tree = ["promkit-widgets/tree"]

[dependencies]
anyhow ={ workspace = true }
promkit-core = { path = "../promkit-core", version = "=0.1.0" }
promkit-widgets = { path = "../promkit-widgets", version = "=0.1.0", default-features = false }
radix_trie = { workspace = true }
