[package]
name = "promkit"
version = "0.9.1"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "A toolkit for building your own interactive command-line tools"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[lib]
name = "promkit"
path = "src/lib.rs"

[features]
default = []
all = [
    "checkbox",
    "form",
    "json",
    "listbox",
    "query-selector",
    "readline",
    "password",
    "confirm",
    "text",
    "tree",
]
checkbox = [
    "promkit-widgets/checkbox",
    "promkit-widgets/text",
]
form = ["promkit-widgets/texteditor"]
json = [
    "promkit-widgets/jsonstream",
    "promkit-widgets/text",
]
listbox = [
    "promkit-widgets/listbox",
    "promkit-widgets/text",
]
query-selector = [
    "promkit-widgets/listbox",
    "promkit-widgets/text",
    "promkit-widgets/texteditor",
]
readline = [
    "promkit-widgets/listbox",
    "promkit-widgets/text",
    "promkit-widgets/texteditor",
]
password = ["readline"]
confirm = ["readline"]
text = ["promkit-widgets/text"]
tree = [
    "promkit-widgets/text",
    "promkit-widgets/tree",
]

[dependencies]
anyhow ={ workspace = true }
promkit-core = { path = "../promkit-core", version = "=0.1.1" }
promkit-widgets = { path = "../promkit-widgets", version = "=0.1.1" }
radix_trie = { workspace = true }
