[package]
name = "promkit"
version = "0.12.1"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "A toolkit for building your own interactive command-line tools"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[lib]
name = "promkit"
path = "src/lib.rs"

[features]
default = []
all = [
    "checkbox",
    "confirm",
    "form",
    "json",
    "listbox",
    "password",
    "query-selector",
    "readline",
    "spinner",
    "text",
    "tree",
]
checkbox = ["promkit-widgets/checkbox", "promkit-widgets/text"]
confirm = ["readline"]
form = ["promkit-widgets/texteditor"]
json = ["promkit-widgets/jsonstream", "promkit-widgets/text"]
listbox = ["promkit-widgets/listbox", "promkit-widgets/text"]
password = ["readline"]
query-selector = [
    "promkit-widgets/listbox",
    "promkit-widgets/text",
    "promkit-widgets/texteditor",
]
readline = [
    "promkit-widgets/listbox",
    "promkit-widgets/text",
    "promkit-widgets/texteditor",
]
spinner = ["promkit-widgets/spinner"]
text = ["promkit-widgets/text"]
tree = ["promkit-widgets/text", "promkit-widgets/tree"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
promkit-widgets = { path = "../promkit-widgets", version = "=0.5.0" }
radix_trie = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
