[package]
name = "termharness"
version = "0.1.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2024"
description = "Test harness for terminal applications"
repository = "https://github.com/ynqa/promkit"
license = "MIT"
readme = "README.md"

[lib]
name = "termharness"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
portable-pty = "0.9.0"
thiserror = { workspace = true }
unicode-width = { workspace = true }
vt100 = "0.16.2"
